fixed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -141,6 +141,7 @@
     top: 50%;
     padding: 4px 6px;
     background-color: #1E1E1E;
+    overflow: hidden;
 }
 
 
